src/components/_modals/EditBlog/EditBlog.module.css
/* Main Container */
.mainContainer {
  max-width: 671px;
  /* padding: 16px 24px; */
  padding-top: 32px;
  padding-bottom: 16px;
  height: 100%;
  width: 100%;
}

/* Close Button */
.closeButtonContainer {
  width: 100%;
  display: flex;
  justify-content: end;
  display: none;
}
.closeButton {
  border: none;
  background: none;
  font-size: 20px;
}

/* Wrapper */
.containerWrapper {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 20px;
  margin: auto;
  padding-inline: 24px;
  height: calc(100% - 58px);
  overflow: hidden;
  overflow-y: scroll;
  scrollbar-width: thin; /* For Firefox */
  scrollbar-color: #ccc transparent; /* Thumb and track colors */
}

/* Header Section */
.header {
  display: flex;
  justify-content: space-between;
}
.status {
  color: #000;
  font-family: Poppins;
  font-size: 18px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;
}
.statusSpan {
  color: #000;
  font-family: Poppins;
  font-size: 18px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}
.actionButtons {
  display: flex;
  gap: 10px;
}
.actionButtons button {
  cursor: pointer;
  background-color: white;
}
.previewButton,
.publishButton {
  display: inline-flex;
  padding: 11px 21px;
  justify-content: center;
  align-items: center;
  color: #8064a2;
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 16px; /* 114.286% */
  border-radius: 8px;
  /* border: 1px solid #8064a2; */
}

/* Blog URL */
.blogUrlWrapper {
  display: flex;
  flex-direction: column;
  gap: 5px;
}
.blogLabel {
  color: #6d747a;
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 22px; /* 157.143% */
}
.Star {
  color: var(--mandatory, #c0504d);
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 22px;
}
.urlSpan {
  color: var(--Primary-Full, #8064a2);
  font-family: Poppins;
  font-size: 12px;
  font-style: normal;
  font-weight: 500;
  line-height: 16px; /* 133.333% */
}
.urlInput {
  display: flex;
  height: 40px;
  padding: 12px;
  align-items: center;
  gap: 10px;
  align-self: stretch;
  border-radius: 8px;
  border: 1px solid var(--Grey-Lighter, #ebedf0);
  background: var(--Grey-Hover, #f8f9fa);
  outline: none;

  color: var(--Grey-Dark, #939ca3);
  font-family: Poppins;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px; /* 133.333% */
}
.urlError {
  color: red;
  font-family: Poppins;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px; /* 133.333% */
}
.urlInput::placeholder {
  color: var(--Grey-Dark, #939ca3);
  font-family: Poppins;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px; /* 133.333% */
}
/* Search Pic */
.searchPicWrapper {
  display: flex;
  flex-direction: column;
  gap: 15px;
}
.searchPicText {
  display: flex;
  gap: 10px;
}
.searchSpan {
  color: var(--Grey-Darker, #6d747a);
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 16px; /* 114.286% */
}
.authorSpan {
  color: #000;
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 16px; /* 114.286% */
}
.searchPicContent {
  display: flex;
  gap: 20px;
}
.searchPicFigure {
  width: 64px;
  min-width: 64px;
  height: 64px;
  min-height: 64px;
}
.searchPicImage {
  width: 100%;
  height: 100%;
  border-radius: 64px;
}
.searchPicDetails {
  display: flex;
  flex-direction: column;
  gap: 5px;
}
.searchPicTitle {
  max-width: 470px;
  color: #000;
  font-family: Poppins;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 18px; /* 100% */
}
.searchPicSubtitle {
  max-width: 470px;
  color: var(--Grey-Darker, #6d747a);

  /* Text xs/Medium */
  font-family: Poppins;
  font-size: 12px;
  font-style: normal;
  font-weight: 500;
  line-height: 16px; /* 133.333% */
}
.searchPicAuthor {
  color: var(--Grey-Darker, #6d747a);

  /* Text xs/Medium */
  font-family: Poppins;
  font-size: 12px;
  font-style: normal;
  font-weight: 500;
  line-height: 16px; /* 133.333% */
}
.hr {
  border: none;
  margin: 0 -20px;
  border-bottom: 1px solid var(--Grey-Light, #ced4da);
}
/* Middle Content */
.middleWrapper {
  width: 100%;
  display: flex;
  background: #fff;
  gap: 10px;
}

/* Left Content */
.leftContent {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  border-radius: 8px;
  border: 1px solid var(--Grey-Lighter, #ebedf0);
  background: var(--Base-White, #fff);
}
.leftFigure {
  width: 100%;
  height: 156px;
}
.leftImage {
  width: 100%;
  height: 100%;
  object-fit: fill;
  border-radius: 8px 8px 0 0;
}
.leftTitle {
  color: #000;
  padding: 5px;
  /* Texl lg/Text sm/Medium */
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 22px; /* 157.143% */
}
.leftSubtitle {
  padding: 5px;
  color: var(--Grey-Darker, #6d747a);
  font-family: Poppins;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 18px; /* 150% */
}
.leftDetails {
  padding: 15px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}
.leftAuthorInfo {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 10px;
}
.leftAuthor {
  color: var(--Purple-1, #8064a2);
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: -0.14px;
}
.leftDate {
  color: #939ca3;
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: -0.14px;
}
.leftTags {
  display: flex;
  justify-content: start;
  flex-wrap: wrap;
  gap: 15px;
}
.leftStarIcon {
  width: 18px;
  height: 18px;
}
.leftTag {
  color: var(--Purple-1, #8064a2);
  font-family: Poppins;
  font-size: 12px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: -0.12px;
}

/* Right Content */
.rightContent {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 16px;
}
.blogCardHeader {
  display: flex;
}
.blogCardText {
  color: var(--Grey-Darker, #6d747a);
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 16px; /* 114.286% */
}
.blogCardType {
  color: #000;
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 16px; /* 114.286% */
}
.keywordsHeader {
  color: var(--Grey-Darker, #6d747a);
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 22px; /* 157.143% */
}
.keywordsTextarea {
  all: unset;
  display: flex;
  height: 99px;
  padding: 12px;
  align-items: flex-start;
  gap: 10px;
  align-self: stretch;
  border-radius: 8px;
  border: 1px solid var(--Grey-Lighter, #ebedf0);
  background: var(--Grey-Hover, #f8f9fa);
  color: var(--Grey-Dark, #939ca3);
  font-family: Poppins;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px; /* 133.333% */
}
.hobbiesSection {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 16px;
  align-self: stretch;
}
.hobbiesHeader {
  color: var(--Grey-Darker, #6d747a);
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  display: flex;
  align-items: center;
  gap: 8px;
}
.penIcon {
  width: 16px;
  height: 16px;
  cursor: pointer;
  display: inline-flex;
}
.hobbiesButtons {
  display: flex;
  align-items: flex-start;
  align-content: flex-start;
  gap: 8px;
  align-self: stretch;
  flex-wrap: wrap;
  margin-bottom: 2px;
}
.hobbyButton {
  display: flex;
  padding: 4px 12px;
  justify-content: center;
  align-items: center;
  gap: 8px;
  color: var(--Purple-1, #8064a2);
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 20px; /* 142.857% */
  letter-spacing: -0.14px;
  border: none;
  border-radius: 24px;
  background: var(--Purple-3, #f7f5f9);
}

.hobbyButton:focus-visible {
  outline: 2px solid #8064a2;
}

/* Footer Buttons */
.footerButtons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 16px;
  padding-inline: 24px;
}
.footerButtons button {
  cursor: pointer;
}
.backButton {
  padding: 11px 31.5px;
  min-width: 0;
  /* Texl lg/Text sm/Semibold */
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 16px; /* 114.286% */
}
.saveButton {
  border: #8064a2;
  display: flex;
  width: 99px;
  padding: 12px 33.5px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  flex-shrink: 0;
  border-radius: 8px;
  background: var(--Purple-1, #8064a2);
  color: var(--Grey-white, #fff);

  /* Texl lg/Text sm/Semibold */
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 16px; /* 114.286% */
}

.publishButton:disabled {
  opacity: 0.5 !important;
}

